Fix phone field binding in company registration template

--- a/app/templates/auth/register_company.html
+++ b/app/templates/auth/register_company.html
@@ -26,7 +26,7 @@
 
     <div class="mb-3 text-start">
       <label class="form-label">رقم الهاتف</label>
-      {{ form.phone(class="form-control auth-input", placeholder="05xxxxxxxx") }}
+      {{ form.phone_number(class="form-control auth-input", placeholder="05xxxxxxxx") }}
     </div>
 
     <div class="mb-3 text-start">
