Fix admin dashboard base template shadowing

--- a/app/admin/templates/dashboard/offers.html
+++ b/app/admin/templates/dashboard/offers.html
@@ -1,4 +1,4 @@
-{% extends "dashboard/base.html" %}
+{% extends "dashboard/admin_base.html" %}
 <!-- Offer management table and action controls. -->
 {% set active_page = 'offers' %}
 
