--- a/app/admin/templates/dashboard/users_roles.html
+++ b/app/admin/templates/dashboard/users_roles.html
@@ -1,4 +1,4 @@
-{% extends "dashboard/base.html" %}
+{% extends "dashboard/admin_base.html" %}
 <!-- Role and activation management table for administrators. -->
 
 {% block content %}
