--- a/app/admin/templates/dashboard/activity_log.html
+++ b/app/admin/templates/dashboard/activity_log.html
@@ -1,4 +1,4 @@
-{% extends "dashboard/base.html" %}
+{% extends "dashboard/admin_base.html" %}
 {% block content %}
 <div class="container-fluid py-4">
     <div class="card shadow-sm mb-4">
