--- a/app/admin/templates/dashboard/companies.html
+++ b/app/admin/templates/dashboard/companies.html
@@ -1,4 +1,4 @@
-{% extends "dashboard/base.html" %}
+{% extends "dashboard/admin_base.html" %}
 {% block title %}Companies Management{% endblock %}
 
 {% block content %}
