--- a/app/admin/templates/dashboard/company_edit.html
+++ b/app/admin/templates/dashboard/company_edit.html
@@ -1,4 +1,4 @@
-{% extends "dashboard/base.html" %}
+{% extends "dashboard/admin_base.html" %}
 {% block title %}Edit Company{% endblock %}
 
 {% block content %}
