--- a/app/admin/templates/dashboard/edit_offer_discount.html
+++ b/app/admin/templates/dashboard/edit_offer_discount.html
@@ -1,4 +1,4 @@
-{% extends "dashboard/base.html" %}
+{% extends "dashboard/admin_base.html" %}
 <!-- Form dedicated to updating an offer's base discount. -->
 
 {% block content %}
