--- a/app/admin/templates/dashboard/index.html
+++ b/app/admin/templates/dashboard/index.html
@@ -1,4 +1,4 @@
-{% extends "dashboard/base.html" %}
+{% extends "dashboard/admin_base.html" %}
 <!-- Landing page for the Elite admin dashboard overview. -->
 {% set active_page = 'overview' %}
 
