--- a/app/admin/templates/dashboard/offer_form.html
+++ b/app/admin/templates/dashboard/offer_form.html
@@ -1,4 +1,4 @@
-{% extends "dashboard/base.html" %}
+{% extends "dashboard/admin_base.html" %}
 <!-- Form for creating or editing an offer record. -->
 
 {% block content %}
