--- a/app/admin/templates/dashboard/settings.html
+++ b/app/admin/templates/dashboard/settings.html
@@ -1,4 +1,4 @@
-{% extends "dashboard/base.html" %}
+{% extends "dashboard/admin_base.html" %}
 <!-- LINKED: Added admin-managed dropdown system for Cities and Industries. -->
 {% set active_page = 'settings' %}
 
