--- a/app/admin/templates/dashboard/users.html
+++ b/app/admin/templates/dashboard/users.html
@@ -1,4 +1,4 @@
-{% extends "dashboard/base.html" %}
+{% extends "dashboard/admin_base.html" %}
 <!-- User management table and action controls. -->
 {% set active_page = 'users' %}
 
