--- a/app/templates/company/settings.html
+++ b/app/templates/company/settings.html
@@ -12,7 +12,7 @@
         {% set registration_value = none %}
     {% endif %}
     <section class="settings-layout">
-        <form id="company-settings-form" data-action="{{ url_for('company_portal_bp.settings') }}" class="settings-form" novalidate>
+        <form id="company-settings-form" data-action="{{ url_for('company_portal.settings') }}" class="settings-form" novalidate>
             <fieldset class="settings-section">
                 <legend>Account overview</legend>
                 <div class="row g-4">
