--- a/app/templates/portal/profile.html
+++ b/app/templates/portal/profile.html
@@ -351,7 +351,7 @@
                                 type="button"
                                 data-open-redemption
                                 data-redemption-code="{{ redemption.redemption_code }}"
-                                data-redemption-url="{{ url_for('redemptions.get_qrcode_image', code=redemption.redemption_code) }}"
+                                data-redemption-url="{{ url_for('redemption.get_qrcode_image', code=redemption.redemption_code) }}"
                             >
                                 عرض رمز QR
                             </button>
